<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity" android:background="#F6F1D6">
    <Button
            android:text="@string/narocilo3"
            android:layout_width="0dp"
            android:layout_height="57dp" android:id="@+id/button3"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/button2" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:onClick="znotrajNarocilaCB3" android:textSize="16sp"/>
    <Button
            android:text="@string/narocilo2"
            android:layout_width="0dp"
            android:layout_height="57dp" android:id="@+id/button2"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/button1" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:onClick="znotrajNarocilaCB2" android:textSize="16sp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="ZGODOVINA NAROČIL"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.071" android:textSize="29sp" android:textStyle="bold"
            android:id="@+id/textView2" android:textColor="@color/cherry" android:textAlignment="viewStart"
            android:layout_marginStart="24dp" android:layout_marginEnd="24dp"/>
    <TextView
            android:text="Preglej svoja pretekla naročila in oddaj svoje mnenje"
            android:layout_width="283dp"
            android:layout_height="88dp" android:id="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            android:layout_marginTop="50dp" app:layout_constraintStart_toStartOf="parent"
            android:textColor="#000000" app:layout_constraintEnd_toEndOf="parent" android:textSize="20sp"
            android:textAlignment="center" android:layout_marginStart="8dp" android:layout_marginEnd="8dp"/>

    <Button
        android:id="@+id/button1"
        android:layout_width="0dp"
        android:layout_height="57dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="16dp"
        android:onClick="znotrajNarocilaCB1"
        android:text="@string/narocilo1"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

</androidx.constraintlayout.widget.ConstraintLayout>