<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ZmStrankaOddajaOcene">

    <SeekBar
            style="@style/Widget.AppCompat.SeekBar.Discrete"
            android:layout_width="280dp"
            android:layout_height="67dp"
            android:min="0"
            android:max="4"
            android:progress="3"
            android:id="@+id/ocenaStoritev"
            android:layout_marginTop="180dp"
            app:layout_constraintTop_toBottomOf="@+id/textView4" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="64dp"/>
    <TextView
            android:text="@string/dynamic_ime_narocila"
            android:layout_width="196dp"
            android:layout_height="35dp" android:id="@+id/textView3"
            android:textStyle="bold" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="110dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:textSize="20sp" android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.12"/>
    <TextView
            android:text="@string/dynamic_podrobnosti_narocila"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView4"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="45dp"
            android:layout_marginTop="21dp" app:layout_constraintTop_toBottomOf="@+id/textView3"/>
    <Button
            android:text="Oddaj oceno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/oddajOcenoButton"
            android:layout_marginTop="320dp"
            app:layout_constraintTop_toBottomOf="@+id/textView4" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="56dp" android:onClick="pozeni_oddajCB"/>
    <Button
            android:text="Izbriši oceno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/izbrisiOcenoButton"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            android:layout_marginTop="320dp" android:layout_marginEnd="44dp" app:layout_constraintEnd_toEndOf="parent"
            android:onClick="izbrisiOcenoCB"/>
    <SeekBar
            style="@style/Widget.AppCompat.SeekBar.Discrete"
            android:layout_width="280dp"
            android:layout_height="67dp"
            android:min="0"
            android:max="4"
            android:progress="3"
            android:id="@+id/ocenaHrana"
            android:layout_marginTop="70dp"
            app:layout_constraintTop_toBottomOf="@+id/textView4" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="66dp"/>
    <TextView
            android:text="Oceni hrano:"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView5"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="66dp"
            android:layout_marginTop="51dp" app:layout_constraintTop_toBottomOf="@+id/textView4"/>
    <TextView
            android:text="Oceni storitev:"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView6"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="66dp"
            android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/ocenaHrana"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView7"
            android:text="@string/dynamic_oddana_ocena"
            android:layout_marginTop="39dp" app:layout_constraintTop_toBottomOf="@+id/ocenaStoritev"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="56dp"/>
    <Button
            android:layout_width="55dp"
            android:layout_height="50dp" android:id="@+id/button"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="32dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="32dp"
            app:icon="?attr/homeAsUpIndicator" android:onClick="returnToPreviousPage"/>
</androidx.constraintlayout.widget.ConstraintLayout>